# youtube-tools

./: .gitignore  Dockerfile  README.md  build.sh  cli.py  launcher.py  pyproject.toml  render.yaml  test_dl.py  test_server.py  yt-fetch-cli.spec
.github/workflows/: release.yml
apps/bilingual-subtitle/: .env.template  README.md  main.py  pyproject.toml  test_interactive.py
apps/bilingual-subtitle/gen_subtitle/: README.md  cli.py  interactive.py  models.py  parsers.py  translators.py  utils.py  writers.py  youtube.py
apps/simple-youtube-downloader/: .gitignore  README.md  fly.toml  pyproject.toml  requirements.txt
apps/simple-youtube-downloader/cicd/: Dockerfile
apps/simple-youtube-downloader/src/: delete.py  download.py  main.py  util.py
apps/yt-fetcher-cli/: README.md  cli.py  install.sh  test_interactive.py
apps/yt-fetcher-cli/completions/: yt-fetch-cli.bash
apps/yt-fetcher-cli/yt_fetcher/: README.md  interactive.py  utils.py  youtube.py
apps/yt-fetcher-web/: README.md  main.py
apps/yt-fetcher-web/static/: index.html  style.css
apps/yt-fetcher-web/yt_fetcher/: README.md  web_app.py  youtube.py
completions/: yt-fetch-cli.fish
docs/: consolidation.md
static/: index.html  script.js  style.css
yt_fetcher/: models.py  parsers.py  utils.py  web_app.py  writers.py  youtube.py
