[project]
name = "yt-fetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.135.3",
    "python-multipart>=0.0.26",
    "uvicorn>=0.44.0",
    "yt-dlp>=2026.3.17",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["yt_fetcher*"]
