[project]
name = "yt-fetcher"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "yt-dlp>=2026.3.17",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["yt_fetcher*"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
